--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   device_preview: ^1.1.0
   responsive_builder: ^0.7.0
+  responsive_sizer: ^3.2.0
 
 dev_dependencies:
   flutter_test:
